# ThePrime

./: .gitignore  ANALYSIS.md  ARCHITECTURE_SUGGESTIONS.md  README.md  ai-worker.js  casa.html
alpha_book_node/: Cargo.toml
alpha_book_node/src/: crypto.rs  main.rs  network.rs  state.rs
prime-time-app/: Cargo.toml  index.html  styles.css
prime-time-app/src/: app.rs  lib.rs  main.rs  persistence.rs
prime-time-app/src-tauri/: Cargo.toml  tauri.conf.json
prime-time-app/src-tauri/src/: engine.rs  main.rs  models.rs
prime-time-app/src/components/: footer.rs  ledger.rs  mod.rs  node.rs
prime-time-rs/: .gitignore  Cargo.toml
prime-time-rs/src/: app.rs  lib.rs  main.rs  persistence.rs
prime-time-rs/src/components/: ledger.rs  mod.rs  modals.rs  node.rs  stats.rs
prime-time-rs/src/models/: mod.rs
prime-time-solo-rs/: Cargo.toml
prime-time-solo-rs/src/: app.rs  engine.rs  main.rs  persistence.rs
prime-time-solo-rs/src/components/: stats.rs
prime-time-solo-rs/src/models/: mod.rs
prime_time_workspace/: Cargo.toml
prime_time_workspace/engine/: Cargo.toml
prime_time_workspace/engine/src/: lib.rs
prime_time_workspace/frontend/: Cargo.toml  index.html
prime_time_workspace/frontend/src/: main.rs
prime_time_workspace/server/: Cargo.toml  config.toml
prime_time_workspace/server/src/: main.rs  p2p.rs
prime_time_workspace/tui/: Cargo.toml
prime_time_workspace/tui/src/: main.rs
primetime-node/: .gitignore  Cargo.toml
primetime-node/src/: core.rs  ledger.rs  main.rs  p2p.rs  pow.rs  server.rs
tests/: persistence-load.test.js
