[package]
name = "alpha_book_node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Networking
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "kad", "noise", "yamux", "tcp", "macros"] }
tokio = { version = "1.35", features = ["full"] }

# State & Storage
sled = "0.34" # Embedded key-value store for local DAG state
bincode = "1.3" # Fast binary serialization

# Cryptography & VDF (Verifiable Delay Function)
sha2 = "0.10" # For sequential hashing (Proof of Sequential Work)
ed25519-dalek = { version = "2.0", features = ["rand_core"] } # For node identity and signing transactions
rand = "0.8"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde-big-array = "0.5.1"

[dev-dependencies]
tempfile = "3.26.0"
