[package]
name = "prime-time-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "Element", "Node", "HtmlButtonElement", "Event", "EventTarget", "Worker", "MessageEvent", "Storage", "console"
] }
gloo = "0.11"
gloo-timers = "0.3"
gloo-storage = "0.3"
gloo-utils = "0.2"
gloo-console = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"], default-features = false }
