[package]
name = "primetime-node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "kad", "mdns", "noise", "yamux", "tcp", "macros", "request-response", "json", "cbor"] }
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
lazy_static = "1.4"
parking_lot = "0.12"
bincode = "1.3"
futures = "0.3"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
