[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.4"
krabmaga = "0.5.3"
lazy_static = "1.5.0"
parking_lot = "0.12.5"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
