[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
futures-util = "0.3.32"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
js-sys = "0.3.91"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "EventTarget", "WebSocket", "MessageEvent", "Blob", "FileReader"] }
yew = { version = "0.22.1", features = ["csr"] }
