[package]
name = "server"
version = "0.1.0"
edition = "2024"
[dependencies]

axum = { version = "0.8.8", features = ["ws"] }
bincode = "1.3.3"
config = "0.15.19"
engine = { version = "0.1.0", path = "../engine" }
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.32"
krabmaga = "0.5.3"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "tcp", "noise", "yamux", "macros"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
rand = "0.8.5"
rmp-serde = "1.3.1"
serde = "1.0.228"
sled = "0.34.7"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
